--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
-
+    <link rel="shortcut icon" href="./src/assets/favicon.png" type="image/x-icon">
     <style>
         .material-symbols-outlined {
             font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
