--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,22 +19,11 @@
             font-family: 'Inter', sans-serif;
         }
     </style>
-    <script type="importmap">
-        {
-          "imports": {
-            "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-            "react/": "https://aistudiocdn.com/react@^19.2.0/",
-            "react": "https://aistudiocdn.com/react@^19.2.0",
-            "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-            "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6"
-          }
-        }
-    </script>
 </head>
 
 <body class="bg-background-light text-slate-900 antialiased">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
 </body>
 
 </html>
